# appmod-blueprints

./: .gitignore  .pre-commit-config.yaml  AI-CONTEXT.md  ARCHITECTURE.md  Crossplane_V2_Upgrade.md  DEPLOYMENT-GUIDE.md  GETTING-STARTED.md  ITERATION_PLAN.md  README.md  README_Crossplane_V2_Upgrade.md  RELEASE_NOTES.md  TODO.md  TROUBLESHOOTING.md  Taskfile.yaml  Taskfile.yml  Taskfile.yml.bak  WORKING.md  amazon-q-target-file.md  bootstrap-applicationset.yaml  config.schema.json  config.yaml  create-config.sh  debug-pod.yaml  destroy-all.sh  ecret is still seeing with application diff : spec: spec:  how  notes.txt  recommendations.md  redis-ha-proxy.yml  renovate.json  setup-pre-commit.sh  test-app-mikhail.yaml  test-manual-bucket.yaml  test-scaffolding.sh  test-sed.sh  test-shapirov.yaml  test-webhook.sh  weather-deploy.yaml
.github/: dependabot.yml
applications/strands/: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  CONSISTENT_HASHING.md  Dockerfile  README.md  TESTING.md  build-podman.sh  build.sh  pyproject.toml  requirements.txt
applications/strands/app/: __init__.py  agent.py  config.py  main.py
applications/strands/deployment/: simple-deployment.yaml
applications/strands/tests/: README.md  __init__.py
applications/strands/tests/fixtures/: create-test-role.sh  debug-request.py  multimodal-curl-examples.txt  test-agentgateway.sh  test-pod-direct-bedrock.yaml  test-pod.yaml
applications/strands/tests/integration/: __init__.py  test_a2a.py  test_bedrock_gateway.py  test_multimodal_a2a.py  test_strands_gateway.py
backstage/: Dockerfile  (+8 more)
(+1249 files in other folders)
