[project]
name = "strands-agent-a2a"
version = "1.0.0"
description = "Strands Agent with A2A protocol support"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi~=0.115.0",
    "uvicorn[standard]~=0.32.0",
    "pydantic~=2.0",
    "strands-agents[a2a,litellm]~=1.0",
    "strands-agents-tools~=1.0",
    "litellm~=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest~=8.0",
    "pytest-asyncio~=0.23.0",
    "httpx~=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.uv]
dev-dependencies = [
    "pytest~=8.0",
    "pytest-asyncio~=0.23.0",
    "httpx~=0.27.0",
]
